Arch: Window presets

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -39,6 +39,12 @@
         <file>icons/Arch_Rebar.svg</file>
         <file>icons/Arch_Rebar_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
+        <file>ui/ParametersWindowDouble.svg</file>
+        <file>ui/ParametersWindowSimple.svg</file>
+        <file>ui/ParametersWindowFixed.svg</file>
+        <file>ui/ParametersWindowStash.svg</file>
+        <file>ui/ParametersDoorSimple.svg</file>
+        <file>ui/ParametersDoorGlass.svg</file>
         <file>translations/Arch_af.qm</file>
         <file>translations/Arch_de.qm</file>
         <file>translations/Arch_fi.qm</file>
