--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -39,6 +39,7 @@
         <file>icons/Arch_Rebar.svg</file>
         <file>icons/Arch_Rebar_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
+        <file>ui/archprefs-import.ui</file>
         <file>ui/ParametersWindowDouble.svg</file>
         <file>ui/ParametersWindowSimple.svg</file>
         <file>ui/ParametersWindowFixed.svg</file>
