--- a/src/Mod/OpenSCAD/Resources/OpenSCAD.qrc
+++ b/src/Mod/OpenSCAD/Resources/OpenSCAD.qrc
@@ -1,11 +1,14 @@
 <RCC>
-    <qresource> 
+    <qresource>
         <file>icons/preferences-openscad.svg</file>
         <file>icons/OpenSCAD_AddOpenSCADElement.svg</file>
         <file>icons/OpenSCAD_ColorCodeShape.svg</file>
         <file>icons/OpenSCAD_RefineShapeFeature.svg</file>
         <file>icons/OpenSCAD_ReplaceObject.svg</file>
         <file>icons/OpenSCAD_RemoveSubtree.svg</file>
+        <file>icons/OpenSCAD_MeshBooleans.svg</file>
+        <file>icons/OpenSCAD_Hull.svg</file>
+        <file>icons/OpenSCAD_Minkowski.svg</file>
         <file>ui/openscadprefs-base.ui</file>
         <file>translations/OpenSCAD_tr.qm</file>
         <file>translations/OpenSCAD_sv-SE.qm</file>
@@ -31,4 +34,4 @@
         <file>translations/OpenSCAD_it.qm</file>
         <file>translations/OpenSCAD_pt-PT.qm</file>
     </qresource>
-</RCC> 
+</RCC>
