--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -36,6 +36,7 @@
         <file>icons/Part_CheckGeometry.svg</file>
         <file>icons/Part_Ellipse_Parametric.svg</file>
         <file>icons/Part_Helix_Parametric.svg</file>
+        <file>icons/Part_Spiral_Parametric.svg</file>
         <file>icons/Part_Line_Parametric.svg</file>
         <file>icons/Part_Circle_Parametric.svg</file>
         <file>icons/Part_Point_Parametric.svg</file>
