--- a/src/Mod/Drawing/Gui/Resources/Drawing.qrc
+++ b/src/Mod/Drawing/Gui/Resources/Drawing.qrc
@@ -18,6 +18,7 @@
         <file>icons/actions/drawing-openbrowser.svg</file>
         <file>icons/actions/drawing-annotation.svg</file>
         <file>icons/actions/drawing-clip.svg</file>
+        <file>icons/actions/drawing-symbol.svg</file>
         <file>translations/Drawing_af.qm</file>
         <file>translations/Drawing_de.qm</file>
         <file>translations/Drawing_fi.qm</file>
