--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -47,6 +47,8 @@
         <file>icons/Tree_Part_Ellipsoid_Parametric.svg</file>
         <file>icons/Tree_Part_Torus_Parametric.svg</file>
         <file>icons/Tree_Part_Plane_Parametric.svg</file>
+        <file>icons/Tree_Part_Prism.svg</file>
+        <file>icons/Tree_Part_Wedge.svg</file>
         <file>translations/Part_af.qm</file>
         <file>translations/Part_de.qm</file>
         <file>translations/Part_fi.qm</file>
