+ Fix missing document icon

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -3,6 +3,8 @@
         <file>freecadsplash.png</file>
         <file>background.png</file>
         <file>mouse_pointer.svg</file>
+        <file>Document.svg</file>
+        <file>Feature.svg</file>
         <file>delete.svg</file>
         <file>edit_remove.svg</file>
         <file>add.svg</file>
