--- a/src/Mod/Sketcher/Gui/TaskSketcherValidation.ui
+++ b/src/Mod/Sketcher/Gui/TaskSketcherValidation.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>242</width>
-    <height>75</height>
+    <height>137</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,13 +21,23 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Tolerance:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="comboBoxTolerance"/>
+      </item>
+      <item row="1" column="0">
        <widget class="QPushButton" name="findButton">
         <property name="text">
          <string>Find</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1">
        <widget class="QPushButton" name="fixButton">
         <property name="text">
          <string>Fix</string>
