add SVG icons for the Class Browser
Created new svg icons to replace the 7 png icons in
src/Gui/Icons/ClassBrowser
and made FreeCAD use them

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -27,6 +27,13 @@
         <file>ClassBrowser/type_class.png</file>
         <file>ClassBrowser/type_enum.png</file>
         <file>ClassBrowser/type_module.png</file>
+        <file>ClassBrowser/const_member.svg</file>
+        <file>ClassBrowser/member.svg</file>
+        <file>ClassBrowser/method.svg</file>
+        <file>ClassBrowser/property.svg</file>
+        <file>ClassBrowser/type_class.svg</file>
+        <file>ClassBrowser/type_enum.svg</file>
+        <file>ClassBrowser/type_module.svg</file>
         <file>Std_ViewScreenShot.svg</file>
         <file>breakpoint.svg</file>
         <file>debug-marker.svg</file>
